--- a/Hawaii/UI/Controller/Cell/RequestApprovalTableViewCell.xib
+++ b/Hawaii/UI/Controller/Cell/RequestApprovalTableViewCell.xib
@@ -15,11 +15,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="239" id="KGk-i7-Jjw" customClass="RequestApprovalTableViewCell" customModule="Hawaii" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="390" height="239"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="283" id="KGk-i7-Jjw" customClass="RequestApprovalTableViewCell" customModule="Hawaii" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="390" height="283"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="390" height="238.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="390" height="282.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cvl-Vo-8CM">
@@ -55,7 +55,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" text="Duration" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RaS-6T-Rhl">
-                        <rect key="frame" x="24" y="80" width="66" height="21"/>
+                        <rect key="frame" x="24" y="114" width="56.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="NOJ-HX-WQl"/>
                         </constraints>
@@ -66,8 +66,20 @@
                             <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
                         </userDefinedRuntimeAttributes>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" text="Reason" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hGb-Aw-y0O">
+                        <rect key="frame" x="24" y="80" width="56.5" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="DeL-bq-1nW"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
+                        </userDefinedRuntimeAttributes>
+                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3IK-xi-4Hb">
-                        <rect key="frame" x="44" y="152" width="46" height="21"/>
+                        <rect key="frame" x="34.5" y="186" width="46" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -76,7 +88,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fUS-mg-hoM">
-                        <rect key="frame" x="106" y="80" width="268" height="21"/>
+                        <rect key="frame" x="96.5" y="114" width="277.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -85,7 +97,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HhR-ga-jRP">
-                        <rect key="frame" x="106" y="114" width="268" height="21"/>
+                        <rect key="frame" x="96.5" y="148" width="277.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -94,7 +106,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MfP-J3-NtA">
-                        <rect key="frame" x="106" y="152" width="268" height="21"/>
+                        <rect key="frame" x="96.5" y="186" width="277.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -103,7 +115,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dates" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D7P-GM-2BY">
-                        <rect key="frame" x="45.5" y="114" width="44.5" height="21"/>
+                        <rect key="frame" x="36" y="148" width="44.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -112,7 +124,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GnJ-JQ-qVX">
-                        <rect key="frame" x="259" y="187" width="115" height="30"/>
+                        <rect key="frame" x="259" y="221" width="115" height="30"/>
                         <state key="normal" title="Cancel"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="string" keyPath="buttonStyle" value="redAndRounded"/>
@@ -122,7 +134,7 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jNH-xV-jvh">
-                        <rect key="frame" x="80" y="187" width="115" height="30"/>
+                        <rect key="frame" x="80" y="221" width="115" height="30"/>
                         <state key="normal" title="Accept"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="string" keyPath="buttonStyle" value="redAndRounded"/>
@@ -131,31 +143,47 @@
                             <action selector="acceptClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="KEE-it-ijf"/>
                         </connections>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1v-9Y-g79">
+                        <rect key="frame" x="96.5" y="80" width="277.5" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
+                        </userDefinedRuntimeAttributes>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="fUS-mg-hoM" secondAttribute="trailing" constant="16" id="1n4-9c-RvE"/>
-                    <constraint firstItem="RaS-6T-Rhl" firstAttribute="top" secondItem="aec-78-0yL" secondAttribute="bottom" constant="18" id="4Fz-QY-EOG"/>
                     <constraint firstAttribute="trailingMargin" secondItem="aec-78-0yL" secondAttribute="trailing" constant="-23" id="4Nq-xt-NF7"/>
                     <constraint firstItem="GnJ-JQ-qVX" firstAttribute="width" secondItem="jNH-xV-jvh" secondAttribute="width" id="7Xn-UC-TjF"/>
                     <constraint firstItem="jNH-xV-jvh" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="9iO-7V-UuJ"/>
+                    <constraint firstItem="hGb-Aw-y0O" firstAttribute="trailing" secondItem="D7P-GM-2BY" secondAttribute="trailing" id="9qw-aM-IJG"/>
                     <constraint firstItem="HhR-ga-jRP" firstAttribute="trailing" secondItem="fUS-mg-hoM" secondAttribute="trailing" id="B3o-eG-Vba"/>
                     <constraint firstItem="GnJ-JQ-qVX" firstAttribute="height" secondItem="jNH-xV-jvh" secondAttribute="height" id="BwQ-U1-A4P"/>
+                    <constraint firstItem="a1v-9Y-g79" firstAttribute="leading" secondItem="HhR-ga-jRP" secondAttribute="leading" id="CHl-aW-Oep"/>
                     <constraint firstItem="RaS-6T-Rhl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="CuZ-Wm-MMg"/>
                     <constraint firstItem="GnJ-JQ-qVX" firstAttribute="trailing" secondItem="MfP-J3-NtA" secondAttribute="trailing" id="DHa-Ct-BiO"/>
                     <constraint firstItem="jNH-xV-jvh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="80" id="Dgq-uu-CKS"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="jNH-xV-jvh" secondAttribute="bottom" constant="21" id="E1o-9X-a52"/>
                     <constraint firstItem="3IK-xi-4Hb" firstAttribute="trailing" secondItem="D7P-GM-2BY" secondAttribute="trailing" id="FZq-1G-5SV"/>
                     <constraint firstItem="1yQ-Cj-G2R" firstAttribute="leading" secondItem="cvl-Vo-8CM" secondAttribute="trailing" constant="23" id="Fgr-VR-Txq"/>
                     <constraint firstItem="cvl-Vo-8CM" firstAttribute="width" secondItem="cvl-Vo-8CM" secondAttribute="height" multiplier="1:1" id="HbJ-Cc-bWw"/>
+                    <constraint firstItem="hGb-Aw-y0O" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="IXa-VT-S0L"/>
                     <constraint firstAttribute="trailing" secondItem="JDT-ZS-qIr" secondAttribute="trailing" constant="24" id="JKp-xh-gqV"/>
+                    <constraint firstItem="hGb-Aw-y0O" firstAttribute="top" secondItem="aec-78-0yL" secondAttribute="bottom" constant="18" id="JoE-QA-pDZ"/>
                     <constraint firstItem="GnJ-JQ-qVX" firstAttribute="centerY" secondItem="jNH-xV-jvh" secondAttribute="centerY" id="Mw4-ou-s7o"/>
                     <constraint firstItem="cvl-Vo-8CM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="SII-Vc-McS"/>
-                    <constraint firstAttribute="bottom" secondItem="jNH-xV-jvh" secondAttribute="bottom" constant="21" id="SOd-gz-NrZ"/>
                     <constraint firstItem="JDT-ZS-qIr" firstAttribute="centerY" secondItem="1yQ-Cj-G2R" secondAttribute="centerY" id="WFF-7j-fE9"/>
                     <constraint firstItem="HhR-ga-jRP" firstAttribute="leading" secondItem="fUS-mg-hoM" secondAttribute="leading" id="X8T-zP-gfA"/>
                     <constraint firstItem="D7P-GM-2BY" firstAttribute="height" secondItem="RaS-6T-Rhl" secondAttribute="height" id="XQ9-86-MKH"/>
+                    <constraint firstItem="RaS-6T-Rhl" firstAttribute="top" secondItem="hGb-Aw-y0O" secondAttribute="bottom" constant="13" id="YFd-SV-fV1"/>
+                    <constraint firstItem="a1v-9Y-g79" firstAttribute="trailing" secondItem="HhR-ga-jRP" secondAttribute="trailing" id="YdK-0K-Lkd"/>
                     <constraint firstItem="jNH-xV-jvh" firstAttribute="top" secondItem="3IK-xi-4Hb" secondAttribute="bottom" constant="14" id="ZOA-7t-l2A"/>
                     <constraint firstItem="D7P-GM-2BY" firstAttribute="top" secondItem="RaS-6T-Rhl" secondAttribute="bottom" constant="13" id="ZpJ-jh-ruk"/>
                     <constraint firstItem="1yQ-Cj-G2R" firstAttribute="centerY" secondItem="cvl-Vo-8CM" secondAttribute="centerY" id="aDp-T4-zpP"/>
+                    <constraint firstItem="a1v-9Y-g79" firstAttribute="centerY" secondItem="hGb-Aw-y0O" secondAttribute="centerY" id="bQa-GA-lFK"/>
+                    <constraint firstItem="hGb-Aw-y0O" firstAttribute="height" secondItem="D7P-GM-2BY" secondAttribute="height" id="d4b-9e-Fgv"/>
                     <constraint firstItem="aec-78-0yL" firstAttribute="top" secondItem="cvl-Vo-8CM" secondAttribute="bottom" constant="5" id="fQC-tg-MWx"/>
                     <constraint firstItem="fUS-mg-hoM" firstAttribute="centerY" secondItem="RaS-6T-Rhl" secondAttribute="centerY" id="fwi-bg-f2W"/>
                     <constraint firstItem="MfP-J3-NtA" firstAttribute="leading" secondItem="HhR-ga-jRP" secondAttribute="leading" id="kRg-MO-hhd"/>
@@ -178,10 +206,11 @@
                 <outlet property="requestDates" destination="HhR-ga-jRP" id="bmq-vx-lrF"/>
                 <outlet property="requestDuration" destination="fUS-mg-hoM" id="kTf-5G-TKM"/>
                 <outlet property="requestImage" destination="cvl-Vo-8CM" id="POH-zl-Vhj"/>
+                <outlet property="requestNotes" destination="MfP-J3-NtA" id="Fen-R2-uuF"/>
                 <outlet property="requestPerson" destination="1yQ-Cj-G2R" id="KdQ-Im-Qwa"/>
-                <outlet property="requestReason" destination="MfP-J3-NtA" id="Fen-R2-uuF"/>
+                <outlet property="requestReason" destination="a1v-9Y-g79" id="ggd-rQ-TW6"/>
             </connections>
-            <point key="canvasLocation" x="69" y="151.5"/>
+            <point key="canvasLocation" x="69" y="173.5"/>
         </tableViewCell>
     </objects>
 </document>
