--- a/Hawaii/UI/Controller/Cell/RequestDetailTableViewCell.xib
+++ b/Hawaii/UI/Controller/Cell/RequestDetailTableViewCell.xib
@@ -7,18 +7,17 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="239" id="KGk-i7-Jjw" customClass="RequestDetailTableViewCell" customModule="Hawaii" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="338" height="239"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="273" id="KGk-i7-Jjw" customClass="RequestDetailTableViewCell" customModule="Hawaii" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="338" height="273"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="338" height="238.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="338" height="272.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gXn-VY-h8j">
@@ -39,7 +38,7 @@
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v3N-Nv-jh7">
                         <rect key="frame" x="0.0" y="61" width="338" height="1"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="gC7-ol-lHF"/>
                         </constraints>
@@ -53,8 +52,20 @@
                             <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
                         </userDefinedRuntimeAttributes>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" text="Reason" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIh-1i-w96">
+                        <rect key="frame" x="24" y="80" width="56.5" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="kdL-pQ-LKO"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
+                        </userDefinedRuntimeAttributes>
+                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" text="Duration" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kQv-mE-Odu">
-                        <rect key="frame" x="24" y="80" width="65.5" height="21"/>
+                        <rect key="frame" x="24" y="114" width="56.5" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="H6K-Xh-FiV"/>
                         </constraints>
@@ -66,7 +77,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCg-Dk-w4V">
-                        <rect key="frame" x="43.5" y="152" width="46" height="21"/>
+                        <rect key="frame" x="34.5" y="186" width="46" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -75,7 +86,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eLw-ud-0qs">
-                        <rect key="frame" x="105.5" y="80" width="216.5" height="21"/>
+                        <rect key="frame" x="96.5" y="114" width="225.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -84,7 +95,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="agW-6a-dAJ">
-                        <rect key="frame" x="105.5" y="114" width="216.5" height="21"/>
+                        <rect key="frame" x="96.5" y="148" width="225.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -93,7 +104,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CjV-k9-aEj">
-                        <rect key="frame" x="105.5" y="152" width="216.5" height="21"/>
+                        <rect key="frame" x="96.5" y="186" width="225.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -102,7 +113,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dates" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rda-Yz-vMM">
-                        <rect key="frame" x="45" y="114" width="44.5" height="20.5"/>
+                        <rect key="frame" x="36" y="148" width="44.5" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -111,7 +122,7 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gry-CS-jb0">
-                        <rect key="frame" x="207" y="187" width="115" height="30"/>
+                        <rect key="frame" x="207" y="221" width="115" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="115" id="7rz-PK-E6Q"/>
                             <constraint firstAttribute="height" constant="30" id="HSE-Rq-787"/>
@@ -124,16 +135,28 @@
                             <action selector="onCancel:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="txW-Ic-dqt"/>
                         </connections>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="amn-Lz-fUh">
+                        <rect key="frame" x="97" y="80" width="225.5" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="labelFont" value="fontPrimary"/>
+                        </userDefinedRuntimeAttributes>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="v3N-Nv-jh7" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="0Je-Qd-bfv"/>
                     <constraint firstItem="agW-6a-dAJ" firstAttribute="leading" secondItem="eLw-ud-0qs" secondAttribute="leading" id="0hJ-NM-urF"/>
                     <constraint firstItem="eLw-ud-0qs" firstAttribute="leading" secondItem="kQv-mE-Odu" secondAttribute="trailing" constant="16" id="0qo-0c-qDl"/>
+                    <constraint firstItem="TIh-1i-w96" firstAttribute="top" secondItem="v3N-Nv-jh7" secondAttribute="bottom" constant="18" id="1dg-07-c14"/>
                     <constraint firstItem="H53-KI-ADV" firstAttribute="centerY" secondItem="gXn-VY-h8j" secondAttribute="centerY" id="2Ac-jd-i24"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="rCg-Dk-w4V" secondAttribute="bottom" constant="55" id="3T4-nq-PKN"/>
+                    <constraint firstItem="amn-Lz-fUh" firstAttribute="leading" secondItem="agW-6a-dAJ" secondAttribute="leading" id="2jl-Dn-MDY"/>
                     <constraint firstAttribute="trailing" secondItem="eLw-ud-0qs" secondAttribute="trailing" constant="16" id="5Gp-Vh-HD0"/>
                     <constraint firstItem="Gry-CS-jb0" firstAttribute="top" secondItem="CjV-k9-aEj" secondAttribute="bottom" constant="14" id="5gn-fW-GNk"/>
+                    <constraint firstItem="amn-Lz-fUh" firstAttribute="centerY" secondItem="TIh-1i-w96" secondAttribute="centerY" id="5gr-st-CYX"/>
                     <constraint firstItem="CjV-k9-aEj" firstAttribute="centerY" secondItem="rCg-Dk-w4V" secondAttribute="centerY" id="62I-Qh-U1q"/>
+                    <constraint firstItem="kQv-mE-Odu" firstAttribute="top" secondItem="TIh-1i-w96" secondAttribute="bottom" constant="13" id="6S0-NW-LDr"/>
                     <constraint firstItem="Q6R-x6-Cos" firstAttribute="centerY" secondItem="H53-KI-ADV" secondAttribute="centerY" id="8bQ-V3-U5Z"/>
                     <constraint firstItem="rCg-Dk-w4V" firstAttribute="trailing" secondItem="Rda-Yz-vMM" secondAttribute="trailing" id="AoP-cA-hnm"/>
                     <constraint firstItem="rCg-Dk-w4V" firstAttribute="top" secondItem="Rda-Yz-vMM" secondAttribute="bottom" constant="17.5" id="Ap5-X7-61U"/>
@@ -143,6 +166,7 @@
                     <constraint firstItem="Gry-CS-jb0" firstAttribute="trailing" secondItem="CjV-k9-aEj" secondAttribute="trailing" id="Jze-ee-lui"/>
                     <constraint firstItem="v3N-Nv-jh7" firstAttribute="top" secondItem="gXn-VY-h8j" secondAttribute="bottom" constant="5" id="MMV-Bs-ZBt"/>
                     <constraint firstItem="H53-KI-ADV" firstAttribute="leading" secondItem="gXn-VY-h8j" secondAttribute="trailing" constant="23" id="NcZ-M8-cYz"/>
+                    <constraint firstItem="TIh-1i-w96" firstAttribute="trailing" secondItem="Rda-Yz-vMM" secondAttribute="trailing" id="Q2P-qU-SP8"/>
                     <constraint firstItem="gXn-VY-h8j" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="QaA-5u-Ahe"/>
                     <constraint firstItem="agW-6a-dAJ" firstAttribute="trailing" secondItem="eLw-ud-0qs" secondAttribute="trailing" id="TiA-7b-9el"/>
                     <constraint firstItem="eLw-ud-0qs" firstAttribute="centerY" secondItem="kQv-mE-Odu" secondAttribute="centerY" id="W3Q-fF-GhE"/>
@@ -151,10 +175,12 @@
                     <constraint firstAttribute="trailing" secondItem="v3N-Nv-jh7" secondAttribute="trailing" id="adS-KU-cYl"/>
                     <constraint firstItem="Rda-Yz-vMM" firstAttribute="trailing" secondItem="kQv-mE-Odu" secondAttribute="trailing" id="bEQ-TP-OUw"/>
                     <constraint firstItem="kQv-mE-Odu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="cia-Bc-EUx"/>
+                    <constraint firstAttribute="trailing" secondItem="amn-Lz-fUh" secondAttribute="trailing" constant="15.5" id="fX5-IA-DFk"/>
+                    <constraint firstAttribute="bottom" secondItem="Gry-CS-jb0" secondAttribute="bottom" constant="21.5" id="gB2-zV-9Zj"/>
                     <constraint firstItem="CjV-k9-aEj" firstAttribute="trailing" secondItem="agW-6a-dAJ" secondAttribute="trailing" id="kTm-mf-tnT"/>
+                    <constraint firstItem="TIh-1i-w96" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="nAM-BN-sHE"/>
                     <constraint firstItem="CjV-k9-aEj" firstAttribute="leading" secondItem="agW-6a-dAJ" secondAttribute="leading" id="nzD-ks-y5q"/>
                     <constraint firstItem="agW-6a-dAJ" firstAttribute="centerY" secondItem="Rda-Yz-vMM" secondAttribute="centerY" id="tOw-ci-dlR"/>
-                    <constraint firstItem="kQv-mE-Odu" firstAttribute="top" secondItem="v3N-Nv-jh7" secondAttribute="bottom" constant="18" id="yUY-Ov-fFq"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -164,10 +190,11 @@
                 <outlet property="requestDates" destination="agW-6a-dAJ" id="2Na-Aj-irp"/>
                 <outlet property="requestDuration" destination="eLw-ud-0qs" id="Pmf-rW-fz8"/>
                 <outlet property="requestImage" destination="gXn-VY-h8j" id="vU1-pY-x6B"/>
-                <outlet property="requestReason" destination="CjV-k9-aEj" id="h2j-eT-z4Z"/>
+                <outlet property="requestNotes" destination="CjV-k9-aEj" id="38o-OQ-61h"/>
+                <outlet property="requestReason" destination="amn-Lz-fUh" id="RcC-OJ-dvf"/>
                 <outlet property="requestStatus" destination="H53-KI-ADV" id="KAP-YM-hkP"/>
             </connections>
-            <point key="canvasLocation" x="25" y="-18.5"/>
+            <point key="canvasLocation" x="25" y="-1.5"/>
         </tableViewCell>
     </objects>
 </document>
